--- a/src/tank_engine/src/tank_engine/CMakeLists.txt
+++ b/src/tank_engine/src/tank_engine/CMakeLists.txt
@@ -12,7 +12,7 @@ FIND_PACKAGE(Boost COMPONENTS system)
 TARGET_LINK_LIBRARIES(tank_engine ${Boost_LIBRARIES})
   
 if (NOT MSVC)
-  TARGET_LINK_LIBRARIES(tank_engine swre_interface_cpp dose_cpp dots_generated-Consoden-cpp dots_generated-Safir-cpp dots_cpp logging_cpp lluf_utils)
+  TARGET_LINK_LIBRARIES(tank_engine swre_interface_cpp dose_cpp dots_generated-Consoden-cpp dots_generated-Safir-cpp dots_cpp logging_cpp lluf_utils confuse)
 endif()
 
 INSTALL(TARGETS tank_engine
