Added super awesome smoke-screen powerup

--- a/rules.cfg
+++ b/rules.cfg
@@ -6,4 +6,4 @@ hit_points = 2	//points gained for hitting the enemy witha  missile or laser
 dude_penalty = -5	//points lost for hitting the dude.
 draw_points = 1		//Points gained in case of a draw
 walkover_penalty = 5	//points awarded to poonent in case of a walkover.
-
+smoke_timer = 3 // For how many rounds the smoke grenades has effect
