fixed super awesome config system

--- a/rules.cfg
+++ b/rules.cfg
@@ -1,9 +1,36 @@
-# this is a comment
-coin_value = 1 // Points gained by snatching a cont
-gas_penalty = 1	// Points lost hen hitting gas
-survival_points = 3  // Points gained for not dying
-hit_points = 2	//points gained for hitting the enemy witha  missile or laser
-dude_penalty = -5	//points lost for hitting the dude.
-draw_points = 1		//Points gained in case of a draw
-walkover_penalty = 5	//points awarded to poonent in case of a walkover.
-smoke_timer = 3 // For how many rounds the smoke grenades has effect
+# engine related thingys
+coin_value = 1 						// Points gained by snatching a cont
+gas_penalty = 1						// Points lost hen hitting gas
+survival_points = 3  				// Points gained for not dying
+hit_points = 2						//points gained for hitting the enemy witha  missile or laser
+dude_penalty = -5					//points lost for hitting the dude.
+draw_points = 1						//Points gained in case of a draw
+walkover_penalty = 5				//points awarded to poonent in case of a walkover.
+smoke_timer = 3						// For how many rounds the smoke grenades has effect
+
+#gui defaults
+frame_rate 		= 30
+audio_enabled 	= true
+
+laser_delay		= 1 // has no effect :p
+smoke_puffs		= 7
+smoke_spread 	= 100
+smoke_speed		= 200
+
+death_explosion_count	=	10
+death_explosion_spread	=	400
+death_explosion_time	=	300
+
+redeemer_radius					= 1
+redeemer_explosion_per_square	= 7
+redeemer_explosion_spread		= 200
+
+#Smoke crap
+master_volume 		= 100
+laser_sound_volume 	= 90
+coin_volume			= 80
+scream_volume		= 60
+fire_volume			= 35
+explosion_volume	= 80
+smoke_volume		= 75
+
