added redeemer ammo pickup sound

--- a/rules.cfg
+++ b/rules.cfg
@@ -26,11 +26,12 @@ redeemer_explosion_per_square	= 7
 redeemer_explosion_spread		= 200
 
 #Smoke crap
-master_volume 		= 100
-laser_sound_volume 	= 90
-coin_volume			= 80
-scream_volume		= 60
-fire_volume			= 35
-explosion_volume	= 80
-smoke_volume		= 75
+master_volume 			= 100
+laser_sound_volume 		= 90
+coin_volume				= 80
+scream_volume			= 60
+fire_volume				= 35
+explosion_volume		= 80
+smoke_volume			= 75
+redeemer_ammo_volume	= 85
 
