Added directive to install rules.cfg to safir
Puts it in a known location in SAFIR_RUNTIME

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,5 +30,6 @@ INSTALL(TARGETS config
         LIBRARY DESTINATION ${SAFIR_RUNTIME}/lib
         ARCHIVE DESTINATION ${SAFIR_SDK}/lib)
 
+INSTALL(FILES rules.cfg DESTINATION ${SAFIR_RUNTIME}/data/tank_game)
 
 INSTALL_DEBUG_INFO(config)
